--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test --exit",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "express": "^4.15.3"
   },
   "devDependencies": {
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
-    "express": "^4.15.3",
     "mocha": "^3.5.0"
   }
 }
